# trg

./: CMakeLists.txt  README.md  package.xml  requirements.txt  setup.py
config/: panda.yaml
data/results/packed/: packed  packed0.json  packed1.json  packed2.json  packed3.json  packed4.json  packed5.json  packed6.json  packed7.json  packed8.json  packed9.json  packed_0.5_0.6.npy
data/results/pile/: pile  pile0.json  pile1.json  pile2.json  pile3.json  pile4.json  pile5.json  pile6.json  pile7.json  pile8.json  pile9.json  pile_0.5_0.6.npy
launch/: panda_grasp.launch
scripts/: data_process.py  panda_grasp.py  sim_grasp.py  train_se_vgn.py  train_vgn.py  vis_label.py
src/trg/: dataset.py  detection.py  grasp.py  io.py  networks.py  perception.py  simulation.py  vis.py
src/trg/experiments/: clutter_removal.py
src/trg/utils/: btsim.py  implicit.py  panda_control.py  ros_utils.py  transform.py  visual.py
